hphp/hack/test/typecheck/case_type/recursive/subtyping_simple2b.php.exp
ERROR: File "subtyping_simple2b.php", line 4, characters 11-11:
Invalid case type declaration. More than one variant of `A` could contain values with the same runtime tag (Typing[4475])
  File "subtyping_simple2b.php", line 4, characters 22-22:
  This is the type `A`, which includes **ints** because it is a cyclic type
  File "subtyping_simple2b.php", line 4, characters 22-22:
    via this variant of the case type `A`
  File "subtyping_simple2b.php", line 5, characters 5-7:
  It overlaps with `int`, which also includes **ints**
